--- a/Intermediate_3/19. Sets.ipynb
+++ b/Intermediate_3/19. Sets.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sets\n",
+    "# [Sets](https://docs.python.org/3.5/library/stdtypes.html#set)\n",
     "\n",
-    "Set is an <b>unordered</b> collection of <b>unique</b> (no duplicate) objects.  Sets can be used to perform mathematical set operations like union, intersection, symmetric difference etc."
+    "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. Sets can be used to perform mathematical set operations like union, intersection, symmetric difference etc."
    ]
   },
   {
@@ -15,8 +15,7 @@
    "source": [
     "## 19.1 Creating a set\n",
     "\n",
-    "If we want to create a set, we can call the built-in <b>`set()`</b> function with a sequence or another iterable object: \n",
-    "\n"
+    "If we want to create a set, we can call the built-in __`set()`__ function with a sequence or another iterable object:"
    ]
   },
   {
@@ -30,14 +29,14 @@
     "# Run the Code\n",
     "x = set(\"Python Tutorial\")\n",
     "\n",
-    "xpreferably"
+    "x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can pass a list to the built-in set function, as we can see in the following: "
+    "We can pass a list to the built-in set function, as we can see in the following:"
    ]
   },
   {
@@ -58,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to show now, what happens, if we pass a tuple with reappearing elements to the set function - in our example the country \"Philippines\": "
+    "We want to show now, what happens, if we pass a tuple with reappearing elements to the set function - in our example the country \"Philippines\":"
    ]
   },
   {
@@ -109,18 +108,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 19.2 Methods\n",
+    "## 19.2 Methods and Operations\n",
     "\n",
+    "### `add()`\n",
     "\n",
-    "### `add( )`\n",
-    "A method which adds an element, which has to be immutable, to a set.\n"
+    "A method which adds an element, which has to be immutable, to a set."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -135,7 +134,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `clear( )`\n",
+    "### `clear()`\n",
+    "\n",
     "All elements will be removed from a set."
    ]
   },
@@ -158,8 +158,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `copy( )`\n",
-    "Creates a shallow copy, which is returned."
+    "### `copy()`\n",
+    "\n",
+    "Creates a shallow copy, which is returned.\n",
+    "\n",
+    "> Note: A shallow copy constructs a new compound object and then (to the extent possible) inserts references into it to the objects found in the original."
    ]
   },
   {
@@ -183,11 +186,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `union( )`\n",
+    "### `union()`\n",
+    "\n",
     "Returns the union of a set and the set of elements in an iterable. \n",
+    "\n",
     "![Intermediate_3](./images/img_union.png)\n",
-    "\n",
-    "\n",
     "\n",
     "For example, you want to return the list of all the students:"
    ]
@@ -201,18 +204,22 @@
    "outputs": [],
    "source": [
     "# Run the Code\n",
-    "math_students = set([\"Jake\", \"Janice\", \"Jane\"])\n",
-    "english_students = set([\"Josh\", \"Jane\"])\n",
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.union(english_students)"
+    "math_students.union(english_students)\n",
+    "\n",
+    "math_students | english_students"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `intersection( )`\n",
-    "The resulting <b>`set`</b> has elements that are common to both source <b>`sets`</b>.\n",
+    "### `intersection()`\n",
+    "\n",
+    "The resulting __`set`__ has elements that are common to both source __`sets`__.\n",
+    "\n",
     "![Intermediate_3](./images/img_intersection.png)\n",
     "\n",
     "For example, you want to return the list of the students who are taking up both Math and English classes:"
@@ -227,19 +234,52 @@
    "outputs": [],
    "source": [
     "# Run the Code\n",
-    "math_students = set([\"Jake\", \"Janice\", \"Jane\"])\n",
-    "english_students = set([\"Josh\", \"Jane\"])\n",
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.intersection(english_students)"
+    "math_students.intersection(english_students)\n",
+    "\n",
+    "math_students & english_students"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `symmetric_difference( )`\n",
+    "### `difference()`\n",
     "\n",
-    "The resulting <b>`set`</b> has elements which are unique to each <b>`set`</b>.\n",
+    "The resulting __`set`__ has elements of the left-hand set with all elements from the right-hand set removed.\n",
+    "\n",
+    "![Intermediate_3](./images/img_difference.png)\n",
+    "\n",
+    "For example, you want to return the list of the students are only taking up Math:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the Code\n",
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "english_students = {\"Josh\", \"Jane\"}\n",
+    "\n",
+    "math_students.difference(english_students)\n",
+    "\n",
+    "math_students - english_students"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `symmetric_difference()`\n",
+    "\n",
+    "The resulting __`set`__ has elements which are unique to each __`set`__.\n",
+    "\n",
     "![Intermediate_3](./images/img_symmetric_difference.png)\n",
     "\n",
     "For example, you want to return the list of the students are only taking up one of the classes:"
@@ -254,10 +294,72 @@
    "outputs": [],
    "source": [
     "# Run the Code\n",
-    "math_students = set([\"Jake\", \"Janice\", \"Jane\"])\n",
-    "english_students = set([\"Josh\", \"Jane\"])\n",
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.symmetric_difference(english_students)"
+    "math_students.symmetric_difference(english_students)\n",
+    "\n",
+    "math_students ^ english_students"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Membership\n",
+    "\n",
+    "Membership can be checked in sets similar to lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the Code\n",
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "english_students = {\"Josh\", \"Jane\"}\n",
+    "\n",
+    "\"Jane\" in math_students\n",
+    "\"Josh\" not in english_students"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set Comprehension\n",
+    "\n",
+    "Comprehensions can be used in sets similar to lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
+    "\n",
+    "{\"{}: {}\".format(index, student) for index, student in enumerate(math_students)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other Methods and Operations\n",
+    "\n",
+    "There are other operations available on sets such as checking for (proper) subsets or supersets, as well as compound operations. Sets provide many methods and operations that allow for shorter code, avoiding loops while maintaining code readability.\n",
+    "\n",
+    "### Why bring up sets now?\n",
+    "\n",
+    "By now you may already have a good grasp of some of Python's data types such as the list and tuple. We are starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some query results have a `QuerySet` data type. Thinking in terms of sets is very useful when working with database queries."
    ]
   }
  ],
