--- a/Intermediate_3/19. Sets.ipynb
+++ b/Intermediate_3/19. Sets.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we have expected, no doublets are in the resulting set of countries."
+    "As expected, no doubles are in the result."
    ]
   },
   {
@@ -102,6 +102,27 @@
     "fruits = {\"strawberry\", \"orange\", \"apple\", \"grapes\"}\n",
     "\n",
     "fruits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Empty sets can't be created using curly braces since dictionaries are created this way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "curly_braces = {}\n",
+    "set_function = set()\n",
+    "\n",
+    "type(curly_braces), type(set_function)"
    ]
   },
   {
@@ -207,9 +228,7 @@
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.union(english_students)\n",
-    "\n",
-    "math_students | english_students"
+    "math_students.union(english_students) or math_students | english_students"
    ]
   },
   {
@@ -237,9 +256,7 @@
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.intersection(english_students)\n",
-    "\n",
-    "math_students & english_students"
+    "math_students.intersection(english_students) or math_students & english_students"
    ]
   },
   {
@@ -267,9 +284,7 @@
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.difference(english_students)\n",
-    "\n",
-    "math_students - english_students"
+    "math_students.difference(english_students) or math_students - english_students"
    ]
   },
   {
@@ -297,9 +312,7 @@
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "math_students.symmetric_difference(english_students)\n",
-    "\n",
-    "math_students ^ english_students"
+    "math_students.symmetric_difference(english_students) or math_students ^ english_students"
    ]
   },
   {
@@ -323,8 +336,7 @@
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
-    "\"Jane\" in math_students\n",
-    "\"Josh\" not in english_students"
+    "\"Jane\" in math_students, \"Jake\" not in english_students"
    ]
   },
   {
@@ -337,8 +349,17 @@
     "\n",
     "### Why bring up sets now?\n",
     "\n",
-    "By now you may already have a good grasp of some of Python's data types such as the list and tuple. We are starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some query results have a `QuerySet` data type. Thinking in terms of sets is very useful when working with database queries."
+    "By now you may already have a good grasp of some of Python's data types such as lists, tuples and dictionaries. We can avoid confusion between the types. We are also starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some query results have a `QuerySet` data type. Thinking in terms of sets is very useful when working with database queries."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
