--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -89,8 +89,8 @@
    },
    "outputs": [],
    "source": [
-    ">>> import sqlalchemy\n",
-    ">>> sqlalchemy.__version__ "
+    "import sqlalchemy\n",
+    "sqlalchemy.__version__ "
    ]
   },
   {
@@ -109,8 +109,8 @@
    },
    "outputs": [],
    "source": [
-    ">>> from sqlalchemy import create_engine\n",
-    ">>> engine = create_engine('sqlite:///:memory:', echo=True)"
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('sqlite:///:memory:', echo=True)"
    ]
   },
   {
@@ -151,9 +151,9 @@
    },
    "outputs": [],
    "source": [
-    ">>> from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
     "\n",
-    ">>> Base = declarative_base()"
+    "Base = declarative_base()"
    ]
   },
   {
@@ -171,18 +171,18 @@
    },
    "outputs": [],
    "source": [
-    ">>> from sqlalchemy import Column, Integer, String\n",
-    ">>> class User(Base):\n",
-    "...     __tablename__ = 'users'\n",
-    "...\n",
-    "...     id = Column(Integer, primary_key=True)\n",
-    "...     name = Column(String)\n",
-    "...     fullname = Column(String)\n",
-    "...     password = Column(String)\n",
-    "...\n",
-    "...     def __repr__(self):\n",
-    "...        return \"<User(name='%s', fullname='%s', password='%s')>\" % (\n",
-    "...                             self.name, self.fullname, self.password)"
+    "from sqlalchemy import Column, Integer, String\n",
+    "class User(Base):\n",
+    "        __tablename__ = 'users'\n",
+    "\n",
+    "        id = Column(Integer, primary_key=True)\n",
+    "        name = Column(String)\n",
+    "        fullname = Column(String)\n",
+    "        password = Column(String)\n",
+    "\n",
+    "        def __repr__(self):\n",
+    "            return \"<User(name='%s', fullname='%s', password='%s')>\" % (\n",
+    "                self.name, self.fullname, self.password)"
    ]
   },
   {
@@ -222,12 +222,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> User.__table__\n",
-    "Table('users', MetaData(bind=None),\n",
-    "            Column('id', Integer(), table=<users>, primary_key=True, nullable=False),\n",
-    "            Column('name', String(), table=<users>),\n",
-    "            Column('fullname', String(), table=<users>),\n",
-    "            Column('password', String(), table=<users>), schema=None)"
+    "User.__table__"
    ]
   },
   {
@@ -265,25 +260,14 @@
    },
    "outputs": [],
    "source": [
-    ">>> Base.metadata.create_all(engine)\n",
-    "SELECT ...\n",
-    "PRAGMA table_info(\"users\")\n",
-    "()\n",
-    "CREATE TABLE users (\n",
-    "    id INTEGER NOT NULL, name VARCHAR,\n",
-    "    fullname VARCHAR,\n",
-    "    password VARCHAR,\n",
-    "    PRIMARY KEY (id)\n",
-    ")\n",
-    "()\n",
-    "COMMIT"
+    "Base.metadata.create_all(engine)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Intermediate_3](./images/img_metadata.png)"
+    "![Intermediate_3](./images/img_meta_data.png)"
    ]
   },
   {
@@ -303,20 +287,35 @@
    },
    "outputs": [],
    "source": [
-    ">>> ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
-    ">>> ed_user.name\n",
-    "'ed'\n",
-    ">>> ed_user.password\n",
-    "'edspassword'\n",
-    ">>> str(ed_user.id)\n",
-    "'None'"
+    "ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
+    "ed_user.name"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Intermediate_3](./images/img_instance.png)"
+    "![Intermediate_3](./images/img_ed.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ed_user.password\n",
+    "\n",
+    "str(ed_user.id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_ed_pw.png)"
    ]
   },
   {
@@ -347,8 +346,8 @@
    },
    "outputs": [],
    "source": [
-    ">>> from sqlalchemy.orm import sessionmaker\n",
-    ">>> Session = sessionmaker(bind=engine)"
+    "from sqlalchemy.orm import sessionmaker\n",
+    "Session = sessionmaker(bind=engine)"
    ]
   },
   {
@@ -366,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> Session = sessionmaker()"
+    "Session = sessionmaker()"
    ]
   },
   {
@@ -384,7 +383,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> Session.configure(bind=engine)  # once engine is available"
+    "Session.configure(bind=engine)  # once engine is available"
    ]
   },
   {
@@ -402,7 +401,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> session = Session()"
+    "session = Session()"
    ]
   },
   {
@@ -429,15 +428,17 @@
    },
    "outputs": [],
    "source": [
-    ">>> ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
-    ">>> session.add(ed_user)"
+    "ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
+    "session.add(ed_user)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We tell the Session that we’d like to issue all remaining changes to the database and commit the transaction, which has been in progress throughout. We do this via commit(). The Session emits the UPDATE statement for the password change on “ed”, as well as INSERT statements for the three new User objects we’ve added:"
+    "At this point, we say that the instance is pending; no SQL has yet been issued and the object is not yet represented by a row in the database. The Session will issue the SQL to persist Ed Jones as soon as is needed, using a process known as a flush. If we query the database for Ed Jones, all pending information will first be flushed, and the query is issued immediately thereafter.\n",
+    "\n",
+    "For example, below we create a new Query object which loads instances of User. We “filter by” the name attribute of ed, and indicate that we’d like only the first result in the full list of rows. A User instance is returned which is equivalent to that which we’ve added:"
    ]
   },
   {
@@ -448,14 +449,196 @@
    },
    "outputs": [],
    "source": [
-    ">>> session.commit()"
+    "our_user = session.query(User).filter_by(name='ed').first() "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Intermediate_3](./images/img_commit.png)"
+    "![Intermediate_3](./images/img_our_user.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "our_user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_our_user_ed.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In fact, the Session has identified that the row returned is the same row as one already represented within its internal map of objects, so we actually got back the identical instance as that which we just added:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_ed_our_user_true.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ORM concept at work here is known as an identity map and ensures that all operations upon a particular row within a Session operate upon the same set of data. Once an object with a particular primary key is present in the Session, all SQL queries on that Session will always return the same Python object for that particular primary key; it also will raise an error if an attempt is made to place a second, already-persisted object with the same primary key within the session.\n",
+    "\n",
+    "We can add more User objects at once using add_all():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "session.add_all([\n",
+    "    User(name='wendy', fullname='Wendy Williams', password='foobar'),\n",
+    "    User(name='mary', fullname='Mary Contrary', password='xxg527'),\n",
+    "    User(name='fred', fullname='Fred Flinstone', password='blah')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, we’ve decided the password for Ed isn’t too secure, so lets change it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ed_user.password = 'f8s7ccs'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Session is paying attention. It knows, for example, that Ed Jones has been modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "session.dirty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_session_dirty.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and that three new User objects are pending:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "session.new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_session_new.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We tell the Session that we’d like to issue all remaining changes to the database and commit the transaction, which has been in progress throughout. We do this via commit(). The Session emits the UPDATE statement for the password change on “ed”, as well as INSERT statements for the three new User objects we’ve added:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_fake_user.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "commit() flushes whatever remaining changes remain to the database, and commits the transaction. The connection resources referenced by the session are now returned to the connection pool. Subsequent operations with this session will occur in a new transaction, which will again re-acquire connection resources when first needed.\n",
+    "\n",
+    "If we look at Ed’s id attribute, which earlier was None, it now has a value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ed_user.id "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_ed_user_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the Session inserts new rows in the database, all newly generated identifiers and database-generated defaults become available on the instance, either immediately or via load-on-first-access. In this case, the entire row was re-loaded on access because a new transaction was begun after we issued commit(). SQLAlchemy by default refreshes data from a previous transaction the first time it’s accessed within a new transaction, so that the most recent state is available."
    ]
   },
   {
@@ -475,7 +658,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> ed_user.name = 'Edwardo'"
+    "ed_user.name = 'Edwardo'"
    ]
   },
   {
@@ -495,8 +678,8 @@
    },
    "outputs": [],
    "source": [
-    ">>> fake_user = User(name='fakeuser', fullname='Invalid', password='12345')\n",
-    ">>> session.add(fake_user)"
+    "fake_user = User(name='fakeuser', fullname='Invalid', password='12345')\n",
+    "session.add(fake_user)"
    ]
   },
   {
@@ -514,8 +697,7 @@
    },
    "outputs": [],
    "source": [
-    ">>> session.query(User).filter(User.name.in_(['Edwardo', 'fakeuser'])).all()\n",
-    "[<User(name='Edwardo', fullname='Ed Jones', password='f8s7ccs')>, <User(name='fakeuser', fullname='Invalid', password='12345')>]"
+    "session.query(User).filter(User.name.in_(['Edwardo', 'fakeuser'])).all()"
    ]
   },
   {
@@ -533,12 +715,50 @@
    },
    "outputs": [],
    "source": [
-    ">>> session.rollback()\n",
-    "\n",
-    ">>> ed_user.name\n",
-    "u'ed'\n",
-    ">>> fake_user in session\n",
-    "False"
+    "session.rollback()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_rollback.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ed_user.name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_ed_username.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fake_user in session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_fake_user_false.png)"
    ]
   },
   {
@@ -556,8 +776,179 @@
    },
    "outputs": [],
    "source": [
-    ">>> session.query(User).filter(User.name.in_(['ed', 'fakeuser'])).all()\n",
-    "[<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>]"
+    "session.query(User).filter(User.name.in_(['ed', 'fakeuser'])).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_query_user.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Querying\n",
+    "\n",
+    "- A Query object is created using the <b>`query()`</b> method on <b>`Session`</b>. \n",
+    "\n",
+    "- This function takes a variable number of arguments, which can be any combination of classes and class-instrumented descriptors. Below, we indicate a Query which loads User instances. When evaluated in an iterative context, the list of User objects present is returned:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for instance in session.query(User).order_by(User.id):\n",
+    "        print(instance.name, instance.fullname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_return_user_object.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can control the names of individual column expressions using the label() construct, which is available from any ColumnElement-derived object, as well as any class attribute which is mapped to one (such as User.name):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for row in session.query(User.name.label('name_label')).all():\n",
+    "    print(row.name_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_row_label.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The name given to a full entity such as User, assuming that multiple entities are present in the call to query(), can be controlled using aliased() :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ">>> from sqlalchemy.orm import aliased\n",
+    ">>> user_alias = aliased(User, name='user_alias')\n",
+    "\n",
+    ">>> for row in session.query(user_alias, user_alias.name).all():\n",
+    "    print(row.user_alias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_alias.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic operations with Query include issuing LIMIT and OFFSET, most conveniently using Python array slices and typically in conjunction with ORDER BY:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for u in session.query(User).order_by(User.id)[1:3]:\n",
+    "    print(u)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_offset_limit.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and filtering results, which is accomplished either with filter_by(), which uses keyword arguments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for name, in session.query(User.name).\\\n",
+    "        filter_by(fullname='Ed Jones'):\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_filter_by_ed.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or filter(), which uses more flexible SQL expression language constructs. These allow you to use regular Python operators with the class-level attributes on your mapped class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for name, in session.query(User.name).\\\n",
+    "            filter(User.fullname=='Ed Jones'):\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Intermediate_3](./images/img_filter_ed.png)"
    ]
   }
  ],
