--- a/Intermediate_3/19. Sets.ipynb
+++ b/Intermediate_3/19. Sets.ipynb
@@ -349,17 +349,8 @@
     "\n",
     "### Why bring up sets now?\n",
     "\n",
-    "By now you may already have a good grasp of some of Python's data types such as lists, tuples and dictionaries. We can avoid confusion between the types. We are also starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some query results have a `QuerySet` data type. Thinking in terms of sets is very useful when working with database queries."
+    "By now you may already have a good grasp of some of Python's data types such as lists, tuples and dictionaries. We can avoid confusion between the types. We are also starting to work with databases and we're using an ORM to generate queries. Sets, as you'll discover, are perfect for use with database query results. Each database entry is unique, usually with an ID and each set member is unique since no item can be repeated. You know where I'm going with this. In fact, some results are being referred to as a `QuerySet`. Thinking in terms of sets is very useful when working with database queries."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
