--- a/Intermediate_3/21. Generators.ipynb
+++ b/Intermediate_3/21. Generators.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generators are memory-efficient ways of creating lists. Generator expressions look very much like comprehensions. They just create generator objects rather than lists, sets or dictionaries. Generator functions look very much like normal functions except they make use of the `yield` statement to suspend execution. They return generator objects when they are called and it continues to calculate the next value to yield."
+    "Generators are memory-efficient ways of creating lists. Generator expressions look very much like comprehensions. They just create generator objects rather than lists, sets or dictionaries. Generator functions look very much like normal functions except they make use of the `yield` statement to suspend execution. They return generator objects when they are called and these objects return the yield values."
    ]
   }
  ],
