--- a/Intermediate_3/21. Generators.ipynb
+++ b/Intermediate_3/21. Generators.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "* [Generator Functions](https://www.python.org/dev/peps/pep-0255/) - A function which returns a generator iterator\n",
     "\n",
-    "## Generator Expressions\n",
+    "## 21.1 Generator Expressions\n",
     "\n",
     "The previous notebook covered list comprehensions. When lists can no longer fit into the memory of your computer, that's the time when you realize why there is a need for generators. Large lists, however, aren't required when deciding whether to use generators. In fact, generators are more memory-efficient than lists. In Python 2, `range()` used a list while `xrange()` used a generator to create a range of numbers. In Python 3, `range()` defauled to using a generator and `xrange()` is has been deprecated.\n",
     "\n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generator Function\n",
+    "## 21.2 Generator Function\n",
     "\n",
     "Generator functions can achieve the same outcome but coming from a different perspective. They look like a normal functions except that it contains yield expressions for producing a series of values usable in a for-loop or that can be retrieved one at a time with the next() function.\n",
     "\n",
