--- a/Intermediate_3/21. Generators.ipynb
+++ b/Intermediate_3/21. Generators.ipynb
@@ -29,6 +29,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "[x for x in range(10)]"
    ]
   },
@@ -47,6 +48,8 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
+    "\n",
     "# {x: x for x in range(10)}\n",
     "{x for x in range(10)}"
    ]
@@ -68,6 +71,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "gen = (x for x in range(10))\n",
     "\n",
     "gen"
@@ -88,6 +92,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "next(gen)"
    ]
   },
@@ -99,6 +104,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "next(gen)\n",
     "next(gen)"
    ]
@@ -118,6 +124,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "list(gen)"
    ]
   },
