--- a/Intermediate_3/19. Sets.ipynb
+++ b/Intermediate_3/19. Sets.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "# Run the Code\n",
+    "# Run the code\n",
     "x = set(\"Python Tutorial\")\n",
     "\n",
     "x"
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "# Run the Code\n",
+    "# Run the code\n",
     "x = set([\"strawberry\", \"orange\", \"apple\", \"grapes\"])\n",
     "\n",
     "x"
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "# Run the Code\n",
+    "# Run the code\n",
     "cities = set((\"Philippines\", \"Japan\", \"South Korea\",\"Singapore\",\"Philippines\",\"Italy\"))\n",
     "\n",
     "cities"
@@ -332,7 +332,7 @@
    },
    "outputs": [],
    "source": [
-    "# Run the Code\n",
+    "# Run the code\n",
     "math_students = {\"Jake\", \"Janice\", \"Jane\"}\n",
     "english_students = {\"Josh\", \"Jane\"}\n",
     "\n",
