--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -19,6 +19,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "squares = []\n",
     "for x in range(10):\n",
     "    squares.append(x**2)\n",
@@ -41,6 +42,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "squares = [x**2 for x in range(10)]\n",
     "\n",
     "squares"
@@ -65,6 +67,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "[(x, y) for x in [1,2,3] for y in [3,1,4] if x != y]"
    ]
   },
@@ -83,6 +86,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "combs = []\n",
     "for x in [1,2,3]:\n",
     "    for y in [3,1,4]:\n",
@@ -106,6 +110,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "from math import pi\n",
     "[str(round(pi, i)) for i in range(1, 6)]"
    ]
@@ -125,6 +130,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "matrix = [\n",
     "    [1, 2, 3, 4],\n",
     "    [5, 6, 7, 8],\n",
@@ -215,6 +221,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "{x for x in 'abracadabra' if x not in 'abc'}"
    ]
   },
@@ -233,6 +240,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "knights = {'gallahad': 'the pure', 'robin': 'the brave'}\n",
     "{k: v for k, v in knights.items()}"
    ]
@@ -272,6 +280,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "user_list = [\n",
     "    {'name': 'guido', 'active': True},\n",
     "    {'name': 'raymond', 'active': True},\n",
