--- a/Intermediate_2/14. Web Development - Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development - Framework - Flask.ipynb
@@ -28,7 +28,7 @@
     "Flask depends on two libraries:\n",
     "\n",
     "* [Werkzeug](http://werkzeug.pocoo.org/documentation/) - an HTTP and WSGI utility library for Python.\n",
-    "* [Jinja2](http://jinja.pocoo.org/2/documentation/) - a templating engine, and\n",
+    "* [Jinja2](http://jinja.pocoo.org/2/documentation/) - a templating engine.\n",
     "\n",
     "I mentioned WSGI earlier. Under the hood, the Werkzeug library handles it for us so we don't do it manually. I also mentioned HTTP. We'll send documents written in Hypertext Markup Language or HTML over HTTP. We are using the Jinja2 library to make things easier."
    ]
