--- a/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
@@ -235,7 +235,7 @@
     "    {% if kenny.sick %}\n",
     "        Kenny is sick.\n",
     "    {% elif kenny.dead %}\n",
-    "        You killed Kenny!  You bastard!!!\n",
+    "        You killed Kenny!\n",
     "    {% else %}\n",
     "        Kenny looks okay --- so far\n",
     "    {% endif %}\n",
