--- a/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
+++ b/Intermediate_2/16. Web Development - From Handling - WTForms.ipynb
@@ -190,11 +190,11 @@
     "collapsed": true
    },
    "source": [
-    "This small Flask demo uses WTForms to create a registration form that displays submitted data on the page. It uses the code in the examples. Study it and read the documentation for more information.\n",
+    "This small Flask demo uses WTForms to create a registration form that displays submitted data on the page. It uses the code in the examples. Read the documentation for more information.\n",
     "\n",
     "#### Exercise:\n",
     "\n",
-    "In the previous notebook, you created a webpage that showcases an upcoming product. Recreate with and use WTForms. Add an admin login to it. You can hardcode the admin credentials for now."
+    "In the previous notebook, you created a webpage that showcases an upcoming product. Recreate it using WTForms. Add an admin login to it. You can hardcode the admin credentials for now."
    ]
   }
  ],
