--- a/Intermediate_1/12. Basics of OOP in Python.ipynb
+++ b/Intermediate_1/12. Basics of OOP in Python.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "## 12.2 Docstrings\n",
     "\n",
-    "Let's define a new `MyClass` that inherits from `YourClass` and add what's called a docstring and some attributes, then let's see how help() differs."
+    "Let's define a new `MyClass` that inherits from `YourClass` and add what's called a docstring and some attributes, then let's see how `help()` differs."
    ]
   },
   {
